fix: useCase card image label z-index

--- a/theme/site/extras/styles.less
+++ b/theme/site/extras/styles.less
@@ -722,6 +722,15 @@ main
   vertical-align: middle;
 }
 
+.ui.fluid.card.u-card .image > .ribbon.label {
+  z-index: 1;
+  left: calc(0rem - 1.2em);
+}
+
+.ui.fluid.card.u-card > .image {
+  border-radius: 0.28571429rem 0em 0em 0.28571429rem !important;
+}
+
 .ui.fluid.card.u-card .image img.ui.image {
   width: 100%;
   height: 100%;
